force-app/main/default/objects/Opportunity/fields/GTMemberFirms__c.field-meta.xml
<CustomField>
    <fullName>GTMemberFirms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GT Member Firms</label>
    <referenceTo>InboundReferral__c</referenceTo>
    <relationshipLabel>Enquiries (GT Member Firms)</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>