force-app/main/default/objects/Opportunity/fields/GTPricingOptions__c.field-meta.xml
<CustomField>
    <fullName>GTPricingOptions__c</fullName>
    <label>GT Pricing Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>