force-app/main/default/objects/Opportunity/fields/GTValueDifferentiators__c.field-meta.xml
<CustomField>
    <fullName>GTValueDifferentiators__c</fullName>
    <label>GT Value Differentiators</label>
    <length>255</length>
    <type>Text</type>
</CustomField>