force-app/main/default/objects/Opportunity/fields/HowCanWeHelpYou__c.field-meta.xml
<CustomField>
    <fullName>HowCanWeHelpYou__c</fullName>
    <label>Nature of Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>