force-app/main/default/objects/Opportunity/fields/HowDidYouArriveAtThisTentativeFee__c.field-meta.xml
<CustomField>
    <fullName>HowDidYouArriveAtThisTentativeFee__c</fullName>
    <label>How did you arrive at this tentative fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>