force-app/main/default/objects/Opportunity/fields/InboundReferral__c.field-meta.xml
<CustomField>
    <fullName>InboundReferral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inbound Referral</label>
    <referenceTo>InboundReferral__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>