force-app/main/default/objects/Opportunity/fields/IndiaFirmReferringPersonName__c.field-meta.xml
<CustomField>
    <fullName>IndiaFirmReferringPersonName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>India Firm Referring Person&apos;s Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>