force-app/main/default/objects/Opportunity/fields/IntegratedEnquiry__c.field-meta.xml
<CustomField>
    <fullName>IntegratedEnquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integrated Enquiry</label>
    <referenceTo>IntegratedEnquiry__c</referenceTo>
    <relationshipLabel>Enquiries (Integrated Enquiry)</relationshipLabel>
    <relationshipName>Enquiries1</relationshipName>
    <type>Lookup</type>
</CustomField>