force-app/main/default/objects/Opportunity/fields/IntermediaryReferral__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryReferral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intermediary Referral</label>
    <type>Checkbox</type>
</CustomField>