force-app/main/default/objects/Opportunity/fields/IntermediaryReferralFirmName__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryReferralFirmName__c</fullName>
    <label>Intermediary Referral Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>