force-app/main/default/objects/Opportunity/fields/IntermediaryReferralPersonName__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryReferralPersonName__c</fullName>
    <label>Intermediary Referral Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>