force-app/main/default/objects/Opportunity/fields/Introduction_and_Background__c.field-meta.xml
<CustomField>
    <fullName>Introduction_and_Background__c</fullName>
    <label>Introduction and Background</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>