force-app/main/default/objects/Opportunity/fields/Investors_Private_Equity_Firms__c.field-meta.xml
<CustomField>
    <fullName>Investors_Private_Equity_Firms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investors / Private Equity Firms</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enquiries (Investors / Private Equity Firms)</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>