force-app/main/default/objects/Opportunity/fields/Is_Client_a_GT_Member_Firm__c.field-meta.xml
<CustomField>
    <fullName>Is_Client_a_GT_Member_Firm__c</fullName>
    <label>Is Client a GT Member Firm?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>