force-app/main/default/objects/Opportunity/fields/IsOriginatedFromLeadConversion__c.field-meta.xml
<CustomField>
    <fullName>IsOriginatedFromLeadConversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Originated From Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>