force-app/main/default/objects/Opportunity/fields/Job_Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Job_Delivery_Location__c</fullName>
    <label>Job Delivery Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>