force-app/main/default/objects/Opportunity/fields/LastProposedFee__c.field-meta.xml
<CustomField>
    <fullName>LastProposedFee__c</fullName>
    <label>Last Proposed Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>