force-app/main/default/objects/Opportunity/fields/LawFirm__c.field-meta.xml
<CustomField>
    <fullName>LawFirm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Law Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Law Firm)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>