force-app/main/default/objects/Opportunity/fields/LawFirmContacts__c.field-meta.xml
<CustomField>
    <fullName>LawFirmContacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Law Firm Contacts</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Contact_status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enquiries (Law Firm Contacts)</relationshipLabel>
    <relationshipName>Enquiries2</relationshipName>
    <type>Lookup</type>
</CustomField>