force-app/main/default/objects/Opportunity/fields/MarketRisk__c.field-meta.xml
<CustomField>
    <fullName>MarketRisk__c</fullName>
    <label>Market Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>