force-app/main/default/objects/Opportunity/fields/NetIncome__c.field-meta.xml
<CustomField>
    <fullName>NetIncome__c</fullName>
    <label>Net Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>