force-app/main/default/objects/Opportunity/fields/NewClientAge__c.field-meta.xml
<CustomField>
    <fullName>NewClientAge__c</fullName>
    <formula>LastModifiedDate - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>