force-app/main/default/objects/Opportunity/fields/NewClientName__c.field-meta.xml
<CustomField>
    <fullName>NewClientName__c</fullName>
    <label>New Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>