force-app/main/default/objects/Opportunity/fields/NewClientScore__c.field-meta.xml
<CustomField>
    <fullName>NewClientScore__c</fullName>
    <label>New Client Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>