force-app/main/default/objects/Opportunity/fields/NoOfPartnersConnect__c.field-meta.xml
<CustomField>
    <fullName>NoOfPartnersConnect__c</fullName>
    <label>No. Of Partners Connect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>