force-app/main/default/objects/Opportunity/fields/NSL__c.field-meta.xml
<CustomField>
    <fullName>NSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesnN4X</relationshipName>
    <type>Lookup</type>
</CustomField>