force-app/main/default/objects/Opportunity/fields/NSL_Discussion_Status__c.field-meta.xml
<CustomField>
    <fullName>NSL_Discussion_Status__c</fullName>
    <label>NSL Discussion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Discussion</fullName>
            </value>
            <value>
                <fullName>Post NSL Discussion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>