force-app/main/default/objects/Opportunity/fields/NSLApprovedRejectedBy__c.field-meta.xml
<CustomField>
    <fullName>NSLApprovedRejectedBy__c</fullName>
    <label>NSLApprovedRejectedBy</label>
    <length>3276</length>
    <type>LongTextArea</type>
</CustomField>