force-app/main/default/objects/Opportunity/fields/NSLApprovedRejectedDate__c.field-meta.xml
<CustomField>
    <fullName>NSLApprovedRejectedDate__c</fullName>
    <label>NSLApprovedRejectedDate</label>
    <type>Date</type>
</CustomField>