force-app/main/default/objects/Opportunity/fields/Nurture_Finalizing_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Finalizing_Closure_Date__c</fullName>
    <label>Nurture &amp; Finalizing Closure Date</label>
    <type>Date</type>
</CustomField>