force-app/main/default/objects/Opportunity/fields/OldCloseDate__c.field-meta.xml
<CustomField>
    <fullName>OldCloseDate__c</fullName>
    <label>Old Close Date</label>
    <type>Date</type>
</CustomField>