force-app/main/default/objects/Opportunity/fields/OriginalCloseDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalCloseDate__c</fullName>
    <label>Original Close Date</label>
    <type>Date</type>
</CustomField>