force-app/main/default/objects/Opportunity/fields/PardotComments__c.field-meta.xml
<CustomField>
    <fullName>PardotComments__c</fullName>
    <label>Pardot Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>