force-app/main/default/objects/Opportunity/fields/PardotFirstActivity__c.field-meta.xml
<CustomField>
    <fullName>PardotFirstActivity__c</fullName>
    <label>Pardot First Activity</label>
    <type>DateTime</type>
</CustomField>