force-app/main/default/objects/Opportunity/fields/PardotNotes__c.field-meta.xml
<CustomField>
    <fullName>PardotNotes__c</fullName>
    <label>Pardot Notes</label>
    <length>32672</length>
    <type>LongTextArea</type>
</CustomField>