force-app/main/default/objects/Opportunity/fields/PardotScore__c.field-meta.xml
<CustomField>
    <fullName>PardotScore__c</fullName>
    <label>Pardot Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>