force-app/main/default/objects/Opportunity/fields/PendingDaysToExpire__c.field-meta.xml
<CustomField>
    <fullName>PendingDaysToExpire__c</fullName>
    <description>It will calculate pending days for RCC to expire.</description>
    <formula>DueDateTillExpiry__c  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Remaining days till RCC expire.</inlineHelpText>
    <label>Pending Days To Expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>