force-app/main/default/objects/Opportunity/fields/PendingJobs__c.field-meta.xml
<CustomField>
    <fullName>PendingJobs__c</fullName>
    <label>Pending Jobs</label>
    <summaryForeignKey>Job__c.Enquiry__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>