force-app/main/default/objects/Opportunity/fields/PipelineCode__c.field-meta.xml
<CustomField>
    <fullName>PipelineCode__c</fullName>
    <displayFormat>PC-{00000}</displayFormat>
    <label>Pipeline Code</label>
    <type>AutoNumber</type>
</CustomField>