force-app/main/default/objects/Opportunity/fields/Pitch_Presentation_Status__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Presentation_Status__c</fullName>
    <label>Pitch Presentation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Creative_Hub_Status</valueSetName>
    </valueSet>
</CustomField>