force-app/main/default/objects/Opportunity/fields/PleaseSpecify__c.field-meta.xml
<CustomField>
    <fullName>PleaseSpecify__c</fullName>
    <label>Please Specify</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>