force-app/main/default/objects/Opportunity/fields/Prediction_Score__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Score__c</fullName>
    <label>Prediction Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>