force-app/main/default/objects/Opportunity/fields/ProposalCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>ProposalCreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities9</relationshipName>
    <type>Lookup</type>
</CustomField>