force-app/main/default/objects/Opportunity/fields/ProposalURL__c.field-meta.xml
<CustomField>
    <fullName>ProposalURL__c</fullName>
    <label>Proposal URL</label>
    <type>Url</type>
</CustomField>