force-app/main/default/objects/Opportunity/fields/Proposed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Rate__c</fullName>
    <label>Proposed Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>