force-app/main/default/objects/Opportunity/fields/QRMG_checklist__c.field-meta.xml
<CustomField>
    <fullName>QRMG_checklist__c</fullName>
    <label>QRMG checklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>