force-app/main/default/objects/Opportunity/fields/RCCCurrentCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>RCCCurrentCompletionDate__c</fullName>
    <label>RCC Current Completion Date</label>
    <type>Date</type>
</CustomField>