force-app/main/default/objects/Opportunity/fields/RCCCurrentNumber__c.field-meta.xml
<CustomField>
    <fullName>RCCCurrentNumber__c</fullName>
    <displayFormat>RCC-{000000}</displayFormat>
    <label>RCC Current Number</label>
    <type>AutoNumber</type>
</CustomField>