force-app/main/default/objects/Opportunity/fields/RCCCurrentSubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>RCCCurrentSubmissionDate__c</fullName>
    <label>RCC Current Submission Date</label>
    <type>Date</type>
</CustomField>