force-app/main/default/objects/Opportunity/fields/RCCPreviousCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>RCCPreviousCompletionDate__c</fullName>
    <label>RCC Previous Completion Date</label>
    <type>Date</type>
</CustomField>