force-app/main/default/objects/Opportunity/fields/RCCPreviousNumber__c.field-meta.xml
<CustomField>
    <fullName>RCCPreviousNumber__c</fullName>
    <displayFormat>RCC-{000000}</displayFormat>
    <label>RCC Previous Number</label>
    <type>AutoNumber</type>
</CustomField>