force-app/main/default/objects/Opportunity/fields/RCCPreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>RCCPreviousStatus__c</fullName>
    <label>RCC Previous Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Initiated</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Conflict</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>