force-app/main/default/objects/Opportunity/fields/RCCPreviousSubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>RCCPreviousSubmissionDate__c</fullName>
    <label>RCC Previous Submission Date</label>
    <type>Date</type>
</CustomField>