force-app/main/default/objects/Opportunity/fields/RCCStatus__c.field-meta.xml
<CustomField>
    <fullName>RCCStatus__c</fullName>
    <label>RCC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Not Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>