force-app/main/default/objects/Opportunity/fields/ReasonForRecoveryLessThan75__c.field-meta.xml
<CustomField>
    <fullName>ReasonForRecoveryLessThan75__c</fullName>
    <label>Reason For Recovery Less Than 75%</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>