force-app/main/default/objects/Opportunity/fields/ReasonForWinLose__c.field-meta.xml
<CustomField>
    <fullName>ReasonForWinLose__c</fullName>
    <label>Reason For Win/Lose</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>