force-app/main/default/objects/Opportunity/fields/RecurringNonRecurringJobs__c.field-meta.xml
<CustomField>
    <fullName>RecurringNonRecurringJobs__c</fullName>
    <label>Recurring / Non-Recurring Jobs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurring Jobs</fullName>
            </value>
            <value>
                <fullName>Non-Recurring Jobs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>