force-app/main/default/objects/Opportunity/fields/ReferredByIndiaFirmPersonnel__c.field-meta.xml
<CustomField>
    <fullName>ReferredByIndiaFirmPersonnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referred by India Firm Personnel</label>
    <type>Checkbox</type>
</CustomField>