force-app/main/default/objects/Opportunity/fields/REL_BUL_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>REL_BUL_Approval_Status__c</fullName>
    <label>REL/BUL Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>