force-app/main/default/objects/Opportunity/fields/RELBUL__c.field-meta.xml
<CustomField>
    <fullName>RELBUL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REL/BUL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enquiries4</relationshipName>
    <type>Lookup</type>
</CustomField>