force-app/main/default/objects/Opportunity/fields/RemarksWinProb__c.field-meta.xml
<CustomField>
    <fullName>RemarksWinProb__c</fullName>
    <label>Remarks (Win Prob.)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>