force-app/main/default/objects/Opportunity/fields/RMP__c.field-meta.xml
<CustomField>
    <fullName>RMP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RMP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enquiries5</relationshipName>
    <type>Lookup</type>
</CustomField>