force-app/main/default/objects/Opportunity/fields/ScopeOfWork__c.field-meta.xml
<CustomField>
    <fullName>ScopeOfWork__c</fullName>
    <label>Scope Of Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>