force-app/main/default/objects/Opportunity/fields/SMELeader__c.field-meta.xml
<CustomField>
    <fullName>SMELeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SME Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enquiries3</relationshipName>
    <type>Lookup</type>
</CustomField>