force-app/main/default/objects/Opportunity/fields/Sub_Expertice_for_Duplicate_Rule__c.field-meta.xml
<CustomField>
    <fullName>Sub_Expertice_for_Duplicate_Rule__c</fullName>
    <label>Sub Expertice for Duplicate Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>